--- a/01-vite-Vanilla/package.json
+++ b/01-vite-Vanilla/package.json
@@ -6,9 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "standard",
+    "lintfix": "standard --fix"
   },
   "devDependencies": {
+    "standard": "^17.1.0",
     "vite": "^4.4.5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "./node_modules/standard/eslintrc.json"
+    ]
   }
 }
